--- a/css/style.css
+++ b/css/style.css
@@ -22,19 +22,6 @@
   white-space: nowrap;
 }
  
-.sr-only {
-  border: 0; 
-  clip: rect(0 0 0 0); 
-  -webkit-clip-path: polygon(0px 0px, 0px 0px, 0px 0px);
-  clip-path: polygon(0px 0px, 0px 0px, 0px 0px);
-  height: 1px; 
-  margin: -1px;
-  overflow: hidden;
-  padding: 0;
-  position: absolute;
-  width: 1px;
-  white-space: nowrap;
-}
 
 ul {
     padding: 0;
@@ -54,6 +41,11 @@ a {
     width: 600px;
     margin-left: 0;
     margin-right: 0;
+}
+
+.title-slider {
+    font-size: 32px;
+    text-align: center;
 }
 
 .slider-image {
@@ -84,6 +76,7 @@ a {
     font-size: 58px;
     
 }
+
 
 .code {
     margin-top: 30px;
@@ -305,9 +298,6 @@ a:focus {
     transform: scale(1.2);
 }
 
-.service {
- 
-}
 
 .service__item {
     padding: 10px 15px;
@@ -319,3 +309,33 @@ a:focus {
 .service__price {
     color: #6466e2;
 }
+
+.image__service {
+    width: 100px;
+    display: block;
+    margin: 0 auto;
+}
+
+.wrapperAboutService {
+    position: fixed;
+    top: 0; left: 0; bottom: 0; right: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    margin: auto;  
+    background-color: #0a0a0a38;
+    z-index: 999
+}
+
+.contentAboutService {
+    overflow: hidden;
+    padding: 15px 15px;
+    background-color: #fff;
+    width: 50%;
+    height: 100%;
+    margin: 0 auto;
+}
+
+.serviceList {
+    list-style: inherit;
+} 
