--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
     color: #000000d7;
     /* background-color: #f9f9f9; */
     /* background-image: url("../image/body1.jpg"); */
-    background: linear-gradient(155deg, rgba(239,145,255,1) 0%, rgba(255,237,144,1) 37%, rgba(255,165,236,1) 71%, rgba(255,244,155,1) 88%);
+    background: linear-gradient(155deg, rgba(119 95 253) 0%, rgba(255,237,144,1) 37%, rgba(255,165,236,1) 71%, rgba(255,244,155,1) 88%);
 }
 
  
