--- a/css/style.css
+++ b/css/style.css
@@ -80,9 +80,13 @@ a {
 
 .code {
     margin-top: 30px;
-    width: 600px;
+    width: 400px;
     height: 400px;
     background-image: url("../image/code.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    border-radius: 50%;
 }
 
 
@@ -111,6 +115,7 @@ a {
     box-shadow: 0 0 7px #000000ad;
     padding: 10px 5px;
 }
+
 
 .navigator-item:not(:last-child) {
     margin-right: 10px;
@@ -142,6 +147,7 @@ a {
 }
 
 .image-employee {
+    width: 300px;
     display: block;
     margin: 0 auto;
 }
@@ -369,6 +375,27 @@ a:focus {
     padding-left: 10px;
 } 
 
+.portfolio {
+    padding: 15px 0;
+    background-color: #fff;
+}
+
+.portfolio__button {
+    width: 100%;
+    padding: 15px 0;
+    background-color: #fff;
+    border: none;
+    box-shadow: 0 0 10px 0;
+}
+
+.portfolio__button:hover,
+.portfolio__button:focus {
+    cursor: pointer;
+    transition: all 400ms;
+    background-color: #000000d7;
+    color: #fff;
+}
+
 .close-button {
     position: absolute;
     top: 0;
@@ -490,16 +517,20 @@ a:focus {
     }
 }
 
-@media(max-width: 700px){
+@media(max-width: 1440px){
     .service__list {
         display: block;
         margin: 0 auto;
         width: max-content;
     }
+
+    .code {
+        width: 300px;
+    }
 }
 
 
-@media(max-width: 425px){
+@media(max-width: 768px){
     .container {
         width: 315px;
     }
@@ -537,4 +568,12 @@ a:focus {
         display: none;
     }
 
+    .service__item  {
+        padding: 10px 5px;
+    }
+
+    .contentAboutService {
+        font-size: 10px;
+        height: max-content;
+    }
 }
