--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,9 @@
     font-family: 'Rubik', sans-serif;
     font-size: 14px;
     color: #000000d7;
-    /* background-color: #f9f9f9; */
+    background-color: #f7f7f7;
     /* background-image: url("../image/body1.jpg"); */
-    background: linear-gradient(155deg, rgba(119 95 253) 0%, rgba(255,237,144,1) 37%, rgba(255,165,236,1) 71%, rgba(255,244,155,1) 88%);
+    /* background: linear-gradient(155deg, rgba(119 95 253) 0%, rgba(255,237,144,1) 37%, rgba(255,165,236,1) 71%, rgba(255,244,155,1) 88%); */
 }
 
  
@@ -111,9 +111,14 @@ a {
 }
 
 .header {
-    background-color: #fff;
+    background-color: rgb(0, 0, 0);
     box-shadow: 0 0 7px #000000ad;
     padding: 10px 5px;
+    color: #fff;
+}
+
+.header a {
+    color: #fff;
 }
 
 
@@ -261,7 +266,7 @@ a {
     border-radius: 5px;
     padding: 5px 0;
     color: rgb(0, 0, 0);
-    background-color: #fc59d9;
+    background-color: #6466e2;
     color: #fff;
 }
 
@@ -277,7 +282,7 @@ a {
     border: none;
     border-radius: 5px;
     padding: 5px 10px;
-    background-color: #fc59d9;
+    background-color: #6466e2;
     color: #fff;
 }
 
@@ -302,7 +307,7 @@ footer a{
 a:hover,
 a:focus {
     transition: all 400ms;
-    color: #fc59d9;
+    color: #6466e2;
 }
 
 
@@ -380,12 +385,18 @@ a:focus {
     background-color: #fff;
 }
 
+.border__blue {
+    width: 300px;
+    margin: 0 auto;
+    border-bottom: 1px solid #6466e2;
+}
+
 .portfolio__button {
     width: 100%;
     padding: 15px 0;
     background-color: #fff;
     border: none;
-    box-shadow: 0 0 10px 0;
+    /* box-shadow: 0 0 10px 0; */
 }
 
 .portfolio__button:hover,
